RESOLVED FIXED136409
Occasional crashes (null deref) under ViewGestureController::endMagnificationGesture
https://bugs.webkit.org/show_bug.cgi?id=136409
Summary Occasional crashes (null deref) under ViewGestureController::endMagnification...
Tim Horton
Reported 2014-08-30 23:05:33 PDT
Most likely due to using drawingArea without null checking it! rdar://problem/18104748
Attachments
patch (1.62 KB, patch)
2014-08-30 23:07 PDT, Tim Horton
mitz: review+
Tim Horton
Comment 1 2014-08-30 23:07:30 PDT
Tim Horton
Comment 2 2014-08-31 01:05:10 PDT
Note You need to log in before you can comment on or make changes to this bug.