Occasional crashes (null deref) under ViewGestureController::endMagnificationGesture https://bugs.webkit.org/show_bug.cgi?id=136409 <rdar://problem/18104748>

Reviewed by Dan Bernstein.

* UIProcess/mac/ViewGestureControllerMac.mm:
(WebKit::ViewGestureController::endMagnificationGesture):
Null-check DrawingArea.


Canonical link: https://commits.webkit.org/154215@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173144 268f45cc-cd09-0410-ab3c-d52691b4dbfc